force-app/main/default/objects/Account/fields/demoField__c.field-meta.xml
<CustomField>
    <fullName>demoField__c</fullName>
    <label>demoField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>