force-app/main/default/objects/Account/fields/dummyCheck__c.field-meta.xml
<CustomField>
    <fullName>dummyCheck__c</fullName>
    <description>dummy field to check</description>
    <label>dummyCheck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>