force-app/main/default/objects/Account/fields/isDemoReady__c.field-meta.xml
<CustomField>
    <fullName>isDemoReady__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDemoReady</label>
    <type>Checkbox</type>
</CustomField>