force-app/main/default/objects/Account/fields/testField__c.field-meta.xml
<CustomField>
    <fullName>testField__c</fullName>
    <label>testField</label>
    <length>25</length>
    <type>Text</type>
</CustomField>